--- a/Koshla/app/build.gradle
+++ b/Koshla/app/build.gradle
@@ -42,12 +42,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+    implementation 'com.airbnb.android:lottie:3.3.1'
 
-    // Testing-only dependencies
-    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 }
