--- a/Koshla/app/build.gradle
+++ b/Koshla/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.airbnb.android:lottie:3.3.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
 }
