--- a/Koshla/app/src/main/AndroidManifest.xml
+++ b/Koshla/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.WeatherActivity"></activity>
+        <activity
+            android:name=".activity.WeatherActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="portrait">
